--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
+    "angular-calendar": "^0.28.11",
     "axios": "^0.19.2",
+    "date-fns": "^2.12.0",
     "firebase": "^7.11.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
