--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "@angular/router": "~9.0.6",
     "angular-calendar": "^0.28.11",
     "axios": "^0.19.2",
+    "current-week-number": "^1.0.7",
     "date-fns": "^2.12.0",
     "firebase": "^7.11.0",
+    "luxon": "^1.23.0",
+    "moment": "^2.25.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -35,9 +38,10 @@
     "@angular/cli": "~9.0.6",
     "@angular/compiler-cli": "~9.0.6",
     "@angular/language-service": "~9.0.6",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/luxon": "^1.22.0",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
