--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular/cli": "~9.0.6",
     "@angular/compiler-cli": "~9.0.6",
     "@angular/language-service": "~9.0.6",
+    "@types/core-js": "^2.5.3",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/luxon": "^1.22.0",
