--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - node/with-cache:
           steps:
             - run: npm install
-            - run: npm test
+            - run: npm test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
             - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
                 path: test-results.xml
 workflows:
