--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,3 +15,5 @@ jobs:
             - "node_modules"
       - run: npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
       - run: npm run e2e -- --protractor-config=e2e/protractor-ci.conf.js
+      - store_test_results:
+          path: test-results
