Added names and firebase deploy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,12 +8,22 @@ jobs:
       - checkout
       - restore_cache:
           key: my-project-{{ .Branch }}-{{ checksum "package-lock.json" }}
-      - run: npm install
+      - run:
+          name: Install dependencies
+          command: npm install
       - save_cache:
           key: my-project-{{ .Branch }}-{{ checksum "package-lock.json" }}
           paths:
             - "node_modules"
-      - run: npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
+      - run:
+          name: Build
+          command: npm build
+      - run:
+          name: Tests
+          command: npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
       #- run: npm run e2e -- --protractor-config=e2e/protractor-ci.conf.js
       - store_test_results:
           path: test-results
+      - run:
+          name: Firebase deploy
+          command: firebase deploy --token "$FIREBASE_TOKEN" --aot
