removed --aot from config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,4 +26,4 @@ jobs:
           path: test-results
       - run:
           name: Firebase deploy
-          command: ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN" --aot
+          command: ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN"
