Added more tests

--- a/angular.json
+++ b/angular.json
@@ -126,5 +126,8 @@
       }
     }
   },
-  "defaultProject": "plannerplus-frontend"
+  "defaultProject": "plannerplus-frontend",
+  "cli": {
+    "analytics": false
+  }
 }
